--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                     <fieldset class="popup__form-input-container">
                         <input name="tel" id="tel-input" placeholder="Номер телефона" type="tel" class="popup__form-text-input" required minlength="2" maxlength="30">
                         <span class="popup__form-error tel-input-error"></span>
-                        <input name="email" id="email-input" placeholder="Электронная почта" type="email" class="popup__form-text-input" required>
+                        <input name="email" id="email-input" placeholder="Электронная почта" type="email" class="popup__form-text-input" maxlength="40" required>
                         <span class="popup__form-error email-input-error"></span>
-                        <input name="text" id="text-input" placeholder="Ваши пожелания" type="text" class="popup__form-text-input">
+                        <input name="text" id="text-input" placeholder="Ваши пожелания" type="text" class="popup__form-text-input" required>
                         <span class="popup__form-error text-input-error"></span>
 
                     </fieldset>
